mise en forme du texte 2

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <title>Création d’une application météorologique</title>
-<h1>PROJET PERSONNELLE: 
+<h1>PROJET PERSONNELLE:</h1> 
 
-    Nous allons, créer tout au long de ce projet une application météorologique.
-    Cette application affichera les prévisions météorologiques des jours à venir à montpellier.
-    
-    Cependant, pour y parvenir nous avons séparé le travail en trois thème principale, la
-    première partie consisté à crée le site et de faire en sorte qu’elle soit fonctionnelle.
-    La seconde partie, nous allons créer voir une carte interactive de la ville de Montpellier
-    en fonction d’une couleur pour caractériser les différents aspects de la météo. De ce fait nous aurrons 
-    à télécharger des données via un site météorologique.
-    Enfin, nous allons mettre en relation et fusionné tout nos données et probablement un code qu’on aura mis en 
-    place afin de créer l’application.</h1>
+    <p>Nous allons, créer tout au long de ce projet une application météorologique.
+        Cette application affichera les prévisions météorologiques des jours à venir à montpellier.
+        
+        Cependant, pour y parvenir nous avons séparé le travail en trois thème principale, la
+        première partie consisté à crée le site et de faire en sorte qu’elle soit fonctionnelle.
+        La seconde partie, nous allons créer voir une carte interactive de la ville de Montpellier
+        en fonction d’une couleur pour caractériser les différents aspects de la météo. De ce fait nous aurrons 
+        à télécharger des données via un site météorologique.
+        Enfin, nous allons mettre en relation et fusionné tout nos données et probablement un code qu’on aura mis en 
+        place afin de créer l’application.</p>
