modification du site

--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
-<title>Création d’une application météorologique</title>
-<h1>PROJET PERSONNELLE:</h1> 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Le titre de la page -->
+    <title>Climat_project</title>
+    <!-- icone de l'onglet -->
+    <link rel="shortcut icon" href="le soleil.webp">
+</head>
+<body>
 
-    <p>Nous allons, créer tout au long de ce projet une application météorologique.
-        Cette application affichera les prévisions météorologiques des jours à venir à montpellier.
-        
-        Cependant, pour y parvenir nous avons séparé le travail en trois thème principale, la
-        première partie consisté à crée le site et de faire en sorte qu’elle soit fonctionnelle.
-        La seconde partie, nous allons créer voir une carte interactive de la ville de Montpellier
-        en fonction d’une couleur pour caractériser les différents aspects de la météo. De ce fait nous aurrons 
-        à télécharger des données via un site météorologique.
-        Enfin, nous allons mettre en relation et fusionné tout nos données et probablement un code qu’on aura mis en 
-        place afin de créer l’application.</p>
+<header>Nous allons, créer tout au long de ce projet une application météorologique.
+     Cette application affichera les prévisions météorologiques des jours à venir à montpellier.
+     Cependant, pour y parvenir nous avons séparé le travail en trois thème principale,
+     la première partie consisté à crée le site et de faire en sorte qu’elle soit fonctionnelle.
+     La seconde partie, nous allons créer voir une carte interactive de la ville de Montpellier 
+     en fonction d’une couleur pour caractériser les différents aspects de la météo.
+     De ce fait nous aurrons à télécharger des données via un site météorologique. 
+     Enfin, nous allons mettre en relation et fusionné tout nos données et probablement
+     un code qu’on aura mis en place afin de créer l’application.
+    </header>
+
+    <div>
+        <h1>Création d'une application de prévision météorologique</h1>
+        <p>
+
+        </p>
+    </div>
+
+    <div>
+        <h2>Les donées en une image</h2>
+        <p>
+
+        </p>
+        <img src="image_météo.jpg" alt="image_météo.jpg">
+    </div>
+</body>
+</html>
+    
