réduction de la taille de l'image daans le site

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>
 
         </p>
-        <img src="image_météo.jpg" alt="image_météo.jpg">
+        <img src="image_météo.jpg" alt="image_météo.jpg" height="300">
     </div>
 </body>
 </html>
