modification de texte

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
     <div>
         <h2>Les donées en une image</h2>
         <p>
-
+         la prévision météorologique des cinq prochain jours
+         se met à jour automatiquement.
         </p>
         <img src="image_météo.jpg" alt="image_météo.jpg" height="300">
+        <!-- légende -->
+        <caption>La prévision météorologique</caption>
     </div>
 </body>
 </html>
