Quelques données météorologique

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
          la prévision météorologique des cinq prochain jours
          se met à jour automatiquement.
         </p>
-        <img src="image_météo.jpg" alt="image_météo.jpg" height="300">
-        <!-- légende -->
-        <caption>La prévision météorologique</caption>
-    </div>
+
+        </body>
+        </html>
+
+
 </body>
 </html>
-    
