Diagramme de gantt

--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
     <div>
         <h2>Les donées en une image</h2>
         <p>
-         la prévision météorologique des cinq prochain jours
+         la prévision météorologique des cinq prochains jours
          se met à jour automatiquement.
         </p>
 
         </body>
         </html>
-
-
+        
 </body>
 </html>
