modification du html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
         </body>
         </html>
-        
+        <style>
+          html
 
         {
             font-family: "Abel", sans-serif;
