--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
+    <div>
+        <h1>Ma carte interactive</h1>
+    </div>
+    
     <div id="map" style="height: 420px; width: 460px;"></div>
 
     <script>
