--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
 
         th {
-            background-color: #4CAF50;
+            background-color: #52b199;
             color: white;
         }
     </style>
@@ -121,6 +121,31 @@
             <td>2023-10-31</td>
             <td>19.6</td>
             <td>12.8</td>
+        </tr>
+        <tr>
+            <td>2023-11-01</td>
+            <td>18.7</td>
+            <td>11.8</td>
+        </tr>
+        <tr>
+            <td>2023-11-02</td>
+            <td>18.3</td>
+            <td>11.6</td>
+        </tr>
+        <tr>
+            <td>2023-11-03</td>
+            <td>16.4</td>
+            <td>11.1</td>
+        </tr>
+        <tr>
+            <td>2023-11-04</td>
+            <td>15.1</td>
+            <td>11.2</td>
+        </tr>
+        <tr>
+            <td>2023-11-05</td>
+            <td>17.1</td>
+            <td>13.1</td>
         </tr>
         <!-- Ajoutez d'autres lignes pour les jours suivants -->
     </table>
