création d'un lien permettant d'accéder vers une carte affichant les données météorologique

--- a/index.html
+++ b/index.html
@@ -197,4 +197,16 @@
         // Vous pouvez ajouter autant de marqueurs que nécessaire
     </script>
 </body>
+
+
+<body>
+    <h1>Carte Interactive avec les données météorologiques</h1>
+
+    <!-- Insérer un lien vers la carte interactive -->
+    <a href="http://localhost:8888/view/carte_meteo.html">Voir la carte interactive</a>
+
+    
+</body>
+
+
 </html>
