--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Résultats pour 34070 Montpellier</title>
+    <title>Résultats météorologique pour 34070 Montpellier</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -245,7 +245,7 @@
             text-align: center;
         }
         .forecast-table th {
-            background-color: #f2f2f2;
+            background-color: #bef5c3;
         }
         
         /* Ajoutez des couleurs en fonction des conditions météorologiques */
