--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Résultats météorologique pour 34070 Montpellier</title>
+    <title>Résultats pour 34070 Montpellier</title>
     <style>
         body {
             font-family: Arial, sans-serif;
