Explication du plan suivie pour la création de l'application

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
   </header>
 
   <div>
-      <p>Cette section décrira le processus de création de l'application.</p>
+      <p>Au cours de ce projet, nous avons pû réaliser differente recherche concernant la Création d'une application météorologique.
+        Suite à ses recherche nous avons alors mise en place une méthode de travaille afin de répondre
+        à differente problématique qu'on s'est poser.
+
+        Dans un premier temps, nous allons télécharger les données en écrivant un code python et
+        en utilisant le package requests et en seconde temps nous allons utilisée les données télécharger
+        afin de créer un tableau de bors affichant les température actuelle et celle à venir, l'humidité, les Précipitations etc...
+
+        Enfin, nous esseyerons de faire en sorte que les données se mette à jour automatiquement en modiffiant le code html et en 
+        ajoutant une clef API pour faire une requête dans le site open-meteo. 
+        Nous utiliserons également un code qu'on a trouver dans le site "weatherstack" un site fournissant
+        des cles API afin d'obtenir des données météorologiques comme "open-meteo".
+      </p>
   </div>
 
 
