--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #cccccc;
             border-radius: 5px;
         }
         .current-weather {
@@ -260,7 +260,7 @@
             text-align: center;
         }
         .forecast-table th {
-            background-color: #3afada;
+            background-color: #3afa74;
         }
 
         /* Ajouts des couleurs en fonction des conditions météorologiques */
