--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
     <h1>Tableau de Bord Météorologique</h1>
 
-    <h2>Données Actuelles</h2>
+    <h2>Données passés en fonction d'une ville particulière</h2>
     <table>
         <tr>
             <th>Location ID</th>
@@ -125,39 +125,44 @@
             <th>Temperature Minimale (°C)</th>
         </tr>
         <tr>
-            <td>2023-10-30</td>
-            <td>20.1</td>
-            <td>14.8</td>
+            <td>2023-11-10</td>
+            <td>15.4</td>
+            <td>9.2</td>
         </tr>
         <tr>
-            <td>2023-10-31</td>
-            <td>19.6</td>
-            <td>12.8</td>
+            <td>2023-11-11</td>
+            <td>15.3</td>
+            <td>8.0</td>
         </tr>
         <tr>
-            <td>2023-11-01</td>
-            <td>18.7</td>
-            <td>11.8</td>
+            <td>2023-11-12</td>
+            <td>18.4</td>
+            <td>9.0</td>
         </tr>
         <tr>
-            <td>2023-11-02</td>
-            <td>18.3</td>
-            <td>11.6</td>
+            <td>2023-11-13</td>
+            <td>17.5</td>
+            <td>14.7</td>
         </tr>
         <tr>
-            <td>2023-11-03</td>
-            <td>16.4</td>
-            <td>11.1</td>
+            <td>2023-11-14</td>
+            <td>21.4</td>
+            <td>16.7</td>
         </tr>
         <tr>
-            <td>2023-11-04</td>
-            <td>15.1</td>
-            <td>11.2</td>
+            <td>2023-11-15</td>
+            <td>20.5</td>
+            <td>12.5</td>
         </tr>
         <tr>
-            <td>2023-11-05</td>
-            <td>17.1</td>
-            <td>13.1</td>
+            <td>2023-11-16</td>
+            <td>14.1</td>
+            <td>7.6</td>
+        </tr>
+        <tr>
+            <td>2023-11-17</td>
+            <td>13.5</td>
+            <td>7.4</td>
         </tr>
         <!-- On peut ajouter d'autres lignes pour les jours passés -->
     </table>
