corréction du code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="flexbox">
         <ul>
-            <li><img src="./Images/meteo.png" alt="FDS" height="100%" width="100%"></li>
+            <li><img src="./outils/Images/meteo.png" alt="meteo" height="100%" width="100%"></li>
         
            <p>Nous allons, créer tout au long de ce projet une application météorologique.
             Cette application affichera les prévisions météorologiques des jours à venir à Montpellier.
@@ -245,10 +245,10 @@
 </p>
 
         <div class="grid">
-            <h2>Grid</h2>
+            <!-- <h2>Grid</h2> -->
             <!-- des élément qui contients déautres choses -->
             <div class="grid-container">
-                <img src="./Images/FDS.png" alt="logo_FDS">
+                <img src="./outils/Images/FDS.png" alt="logo_FDS">
 
                 <form action="">
                     <input type="text"  id="firstname"
