--- a/index.html
+++ b/index.html
@@ -100,46 +100,45 @@
             <th>Temperature Minimale (°C)</th>
         </tr>
         <tr>
-            <td>2023-11-10</td>
-            <td>15.4</td>
-            <td>9.2</td>
-        </tr>
-        <tr>
-            <td>2023-11-11</td>
-            <td>15.3</td>
-            <td>8.0</td>
-        </tr>
-        <tr>
-            <td>2023-11-12</td>
-            <td>18.4</td>
-            <td>9.0</td>
-        </tr>
-        <tr>
-            <td>2023-11-13</td>
-            <td>17.5</td>
-            <td>14.7</td>
-        </tr>
-        <tr>
-            <td>2023-11-14</td>
-            <td>21.4</td>
-            <td>16.7</td>
-        </tr>
-        <tr>
-            <td>2023-11-15</td>
-            <td>20.5</td>
-            <td>12.5</td>
-        </tr>
-        <tr>
             <td>2023-11-16</td>
-            <td>14.1</td>
-            <td>7.6</td>
+            <td>15.2</td>
+            <td>6.7</td>
         </tr>
         <tr>
             <td>2023-11-17</td>
-            <td>13.5</td>
-            <td>7.4</td>
+            <td>16.3</td>
+            <td>10.1</td>
         </tr>
-        <!-- On peut ajouter d'autres lignes pour les jours passés -->
+        <tr>
+            <td>2023-11-18</td>
+            <td>15.7</td>
+            <td>6.0</td>
+        </tr>
+        <tr>
+            <td>2023-11-19</td>
+            <td>21.5.5</td>
+            <td>6.5</td>
+        </tr>
+        <tr>
+            <td>2023-11-20</td>
+            <td>17.1</td>
+            <td>11.0</td>
+        </tr>
+        <tr>
+            <td>2023-11-21</td>
+            <td>17.1</td>
+            <td>10.3</td>
+        </tr>
+        <tr>
+            <td>2023-11-22</td>
+            <td>13.9</td>
+            <td>6.8</td>
+        </tr>
+        <tr>
+            <td>2023-11-23</td>
+            <td>15.4</td>
+            <td>4.3</td>
+        </tr>
     </table>
 
 
@@ -257,33 +256,43 @@
         
             <tr>
                 <th>Température</th>
-                <td>16 °C</td>
-                <td>14 °C</td>
-                <td>16 °C</td>
-                <td>18 °C</td>
-                <td>17 °C</td>
-                <td>17 °C</td>
-                <td>17 °C</td>
+                <td>12.7 °C</td>
+                <td>15.9 °C</td>
+                <td>15.4 °C</td>
+                <td>20.6 °C</td>
+                <td>17.1 °C</td>
+                <td>16.9 °C</td>
+                <td>13.7 °C</td>
             </tr>
             <tr>
                 <th>Précipitations</th>
-                <td>80%</td>
-                <td>60%</td>
-                <td>70%</td>
-                <td>20%</td>
-                <td>10%</td>
-                <td>10%</td>
-                <td>30%</td>
+                <td>73 %</td>
+                <td>48 %</td>
+                <td>51 %</td>
+                <td>64 %</td>
+                <td>49 %</td>
+                <td>43 %</td>
+                <td>41 %</td>
+            </tr>
+            <tr>
+                <th>Humidité</th>
+                <td>0.0 %</td>
+                <td>0.0 %</td>
+                <td>0.0 %</td>
+                <td>0.0 %</td>
+                <td>0.0 %</td>
+                <td>0.0 %</td>
+                <td>0.0 %</td>
             </tr>
             <tr>
                 <th>Vent</th>
-                <td>35 km/h</td>
-                <td>30 km/h</td>
-                <td>40 km/h</td>
-                <td>25 km/h</td>
-                <td>20 km/h</td>
-                <td>22 km/h</td>
-                <td>18 km/h</td>
+                <td>2.3 km/h</td>
+                <td>20.9 km/h</td>
+                <td>4.5 km/h</td>
+                <td>0.8 km/h</td>
+                <td>19.9 km/h</td>
+                <td>23.9 km/h</td>
+                <td>33.0 km/h</td>
             </tr>
         </table>
     </div> 
