--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             L.marker([43.56, 3.96]).addTo(maCarte)
                 .bindPopup('Pérols');
     
-            L.marker([43.58, 3.96]).addTo(myMap)
+            L.marker([43.58, 3.96]).addTo(maCarte)
                 .bindPopup('AéroportMontpellier');
             // On pout ajouter autant de marqueurs que nécessaire
         </script>    
